--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,10 +28,11 @@
             android:textSize="17dp"/>
 
         <EditText
+            android:id="@+id/etName"
             android:layout_width="200dp"
             android:layout_height="40dp"
-            android:id="@+id/etName"
-            android:layout_marginLeft="25dp"/>
+            android:textSize="13dp"
+            android:layout_marginLeft="25dp" />
 
     </LinearLayout>
 
@@ -51,6 +52,7 @@
             android:layout_width="200dp"
             android:layout_height="40dp"
             android:id="@+id/etEmail"
+            android:textSize="13dp"
             android:layout_marginLeft="25dp"/>
 
     </LinearLayout>
@@ -72,6 +74,7 @@
             android:layout_height="40dp"
             android:inputType="textPassword"
             android:id="@+id/etPassword"
+            android:textSize="13dp"
             android:layout_marginLeft="25dp"/>
 
     </LinearLayout>
@@ -93,6 +96,7 @@
             android:layout_height="40dp"
             android:inputType="textPassword"
             android:id="@+id/etConfirmPassword"
+            android:textSize="13dp"
             android:layout_marginLeft="25dp"/>
 
     </LinearLayout>
@@ -122,7 +126,9 @@
                 android:layout_height="wrap_content"
                 android:text="Male"
                 android:id="@+id/rbMale"
-                android:textSize="17dp" />
+                android:textSize="17dp"
+                android:checked="true"
+                />
 
             <RadioButton
                 android:layout_width="107dp"
@@ -170,9 +176,31 @@
             android:textSize="12dp"
             android:id="@+id/cbFootball"
             />
+
         />
 
     </LinearLayout>
+<!--    <LinearLayout-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginLeft="120dp"-->
+<!--        >-->
+
+<!--        <CheckBox-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Table Tennis"-->
+<!--            android:textSize="12dp"-->
+<!--            android:id="@+id/cbTableTennis"-->
+<!--            />-->
+<!--        <CheckBox-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:text="Badminton"-->
+<!--            android:textSize="12dp"-->
+<!--            android:id="@+id/cbBadminton"-->
+<!--            />-->
+<!--    </LinearLayout>-->
 
 
     <LinearLayout
@@ -187,22 +215,23 @@
             android:text="Date of Birth :"
             android:textSize="17dp" />
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="25dp"
-            android:textSize="15dp"
-            android:hint="DD/MM/YYYY"
-            android:id="@+id/tvDob"
-            />
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="25dp"-->
+<!--            android:textSize="15dp"-->
+<!--            android:hint="DD/MM/YYYY"-->
+<!--            android:id="@+id/tvDob"-->
+<!--            />-->
 
-        <!--        <EditText-->
-        <!--            android:layout_width="200dp"-->
-        <!--            android:layout_height="40dp"-->
-        <!--            android:layout_marginLeft="25dp"-->
-        <!--            android:hint="DD/MM//YYYY"-->
-        <!--            android:id="@+id/etBirthDate"-->
-        <!--            />-->
+                <EditText
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="25dp"
+                    android:hint="DD/MM//YYYY"
+                    android:id="@+id/tvDob"
+                    android:textSize="13dp"
+                    />
         <ToggleButton
             android:id="@+id/tbToggle"
             android:layout_width="wrap_content"
@@ -244,6 +273,7 @@
             android:layout_height="40dp"
             android:layout_marginLeft="25dp"
             android:id="@+id/etCity"
+            android:textSize="13dp"
             />
 
     </LinearLayout>
@@ -264,6 +294,7 @@
             android:layout_height="40dp"
             android:layout_marginLeft="25dp"
             android:id="@+id/etCountry"
+            android:textSize="13dp"
             />
 
     </LinearLayout>
@@ -302,6 +333,7 @@
                 android:text="Advance"
                 android:textSize="16dp"
                 android:id="@+id/rbAdvance"
+                android:checked="true"
                 />
         </RadioGroup>
 
@@ -343,15 +375,25 @@
             android:textSize="20dp"
             android:onClick="clearData"
             />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sign In"
+            android:layout_marginLeft="12dp"
+            android:background="@color/design_default_color_primary_variant"
+            android:textSize="20dp"
+            android:onClick="signIn"
+            />
 
     </LinearLayout>
+
     <TextView
         android:layout_width="350dp"
         android:layout_height="200dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
         android:text="Output Box"
-        android:textSize="16dp"
+        android:textSize="13dp"
         android:textAlignment="center"
         android:id="@+id/tvOutputBox"
         />
